# database-workbench

./: .gitignore  LICENSE  README.en.md  README.md  index.html  latest.json  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: app_config.rs  backup.rs  config.rs  executor.rs  export.rs  favorites.rs  import.rs  json.rs  metadata.rs  mod.rs  models.rs  pool.rs  sqlutils.rs  ssl.rs
src/components/: NotificationCenter.tsx  index.ts
src/components/dialogs/: AboutDialog.tsx  AddFavoriteDialog.tsx  BackupDialog.tsx  index.ts  (+12 more)
src/hooks/: index.ts  useFavorites.ts  useKeyboardShortcuts.ts  useTauri.ts
src/i18n/: index.ts
src/services/: updaterService.ts
src/stores/: appStore.ts  connectionStore.ts  index.ts  notificationStore.ts  tabStore.ts
src/styles/: add-favorite-dialog.css  backup-restore-dialog.css  backup-tab.css  data-dictionary-tab.css  database-object-tab.css  designer-tab.css  er-diagram-tab.css  favorites-dialog.css  function-designer-tab.css  global.css  main-layout.css  options-dialog.css  preview-commit-dialog.css  properties-dialog.css  query-tab.css  restore-tab.css  table-data-tab.css  titlebar.css  update-dialog.css  user-editor-tab.css  user-tab.css  view-designer-tab.css  welcome-tab.css
src/types/: api.ts  jspdf-font.d.ts
src/utils/: editorSettings.ts  favoritePayload.ts  icons.ts  index.ts  menuConfig.ts  monaco.ts  sqlCompletionProvider.ts  toolbarNotice.ts
(+37 files in other folders)
